# RAG_veel

./: Dockerfile  docker-compose.yml  pyproject.toml
notebooks/: Untitled1.ipynb
rag_chat/: main.py  run_rag.py
rag_chat/configs/: logging_config.py
rag_chat/models/: embeddings.py  llm_model.py  pdf_processor.py  rag_pipeline.py  reranking.py
rag_chat/prompts/: prompt_templates.py
rag_chat/redis_utils/: redis_client.py
